# goit-pythonweb-hw-06

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: fc69acb1e157_init.py
src/: connect.py  models.py  my_select.py  seed.py
